feat: define tasks api on swagger document
